# ########################################################################
# Copyright 2019 Advanced Micro Devices, Inc.
# ########################################################################

function(add_rocthrust_test TEST_NAME TEST_SOURCES)
    list(GET TEST_SOURCES 0 TEST_MAIN_SOURCE)
    get_filename_component(TEST_TARGET ${TEST_MAIN_SOURCE} NAME_WE)
    add_executable(${TEST_TARGET} ${TEST_SOURCES})
    target_include_directories(${TEST_TARGET} SYSTEM BEFORE
        PUBLIC
            ${GTEST_INCLUDE_DIRS}
    )
    target_link_libraries(${TEST_TARGET}
        PRIVATE
            rocthrust
            roc::rocprim_hip
            ${GTEST_BOTH_LIBRARIES}
    )
    foreach(amdgpu_target ${AMDGPU_TARGETS})
        target_link_libraries(${TEST_TARGET}
            PRIVATE
                --amdgpu-target=${amdgpu_target}
        )
    endforeach()
    set_target_properties(${TEST_TARGET}
        PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/"
    )
    add_test(${TEST_NAME} ${TEST_TARGET})
endfunction()

# ****************************************************************************
# Tests
# ****************************************************************************
add_rocthrust_test("thrust.hip.adjacent_difference" test_adjacent_difference.cpp)
add_rocthrust_test("thrust.hip.advance" test_advance.cpp)
add_rocthrust_test("thrust.hip.allocator" test_allocator.cpp)
add_rocthrust_test("thrust.hip.binary_search" test_binary_search.cpp)
add_rocthrust_test("thrust.hip.binary_search_descending" test_binary_search_descending.cpp)
add_rocthrust_test("thrust.hip.binary_search_vector" test_binary_search_vector.cpp)
add_rocthrust_test("thrust.hip.binary_search_vector_descending" test_binary_search_vector_descending.cpp)
add_rocthrust_test("thrust.hip.complex" test_complex.cpp)
add_rocthrust_test("thrust.hip.complex_transform" test_complex_transform.cpp)
add_rocthrust_test("thrust.hip.constant_iterator" test_constant_iterator.cpp)
add_rocthrust_test("thrust.hip.copy" test_copy.cpp)
add_rocthrust_test("thrust.hip.copy_n" test_copy_n.cpp)
add_rocthrust_test("thrust.hip.count" test_count.cpp)
add_rocthrust_test("thrust.hip.counting_iterator" test_counting_iterator.cpp)
add_rocthrust_test("thrust.hip.dereference" test_dereference.cpp)
add_rocthrust_test("thrust.hip.device_delete" test_device_delete.cpp)
add_rocthrust_test("thrust.hip.device_ptr" test_device_ptr.cpp)
add_rocthrust_test("thrust.hip.device_reference" test_device_reference.cpp)
add_rocthrust_test("thrust.hip.discard_iterator" test_discard_iterator.cpp)
add_rocthrust_test("thrust.hip.distance" test_distance.cpp)
add_rocthrust_test("thrust.hip.equal" test_equal.cpp)
add_rocthrust_test("thrust.hip.fill" test_fill.cpp)
add_rocthrust_test("thrust.hip.find" test_find.cpp)
add_rocthrust_test("thrust.hip.for_each" test_for_each.cpp)
add_rocthrust_test("thrust.hip.gather" test_gather.cpp)
add_rocthrust_test("thrust.hip.generate" test_generate.cpp)
add_rocthrust_test("thrust.hip.inner_product" test_inner_product.cpp)
add_rocthrust_test("thrust.hip.is_sorted" test_is_sorted.cpp)
add_rocthrust_test("thrust.hip.is_partitioned" test_is_partitioned.cpp)
add_rocthrust_test("thrust.hip.is_sorted_until" test_is_sorted_until.cpp)
add_rocthrust_test("thrust.hip.max_element" test_max_element.cpp)
add_rocthrust_test("thrust.hip.memory" test_memory.cpp)
add_rocthrust_test("thrust.hip.merge" test_merge.cpp)
add_rocthrust_test("thrust.hip.merge_by_key" test_merge_by_key.cpp)
add_rocthrust_test("thrust.hip.min_element" test_min_element.cpp)
add_rocthrust_test("thrust.hip.minmax_element" test_minmax_element.cpp)
add_rocthrust_test("thrust.hip.mismatch" test_mismatch.cpp)
add_rocthrust_test("thrust.hip.pair" test_pair.cpp)
add_rocthrust_test("thrust.hip.pair_reduce" test_pair_reduce.cpp)
add_rocthrust_test("thrust.hip.pair_scan" test_pair_scan.cpp)
add_rocthrust_test("thrust.hip.pair_sort" test_pair_sort.cpp)
add_rocthrust_test("thrust.hip.pair_transform" test_pair_transform.cpp)
add_rocthrust_test("thrust.hip.partition" test_partition.cpp)
add_rocthrust_test("thrust.hip.partition_point" test_partition_point.cpp)
add_rocthrust_test("thrust.hip.permutation_iterator" test_permutation_iterator.cpp)
add_rocthrust_test("thrust.hip.random" test_random.cpp)
add_rocthrust_test("thrust.hip.reduce" test_reduce.cpp)
add_rocthrust_test("thrust.hip.reduce_by_key" test_reduce_by_key.cpp)
add_rocthrust_test("thrust.hip.remove" test_remove.cpp)
add_rocthrust_test("thrust.hip.replace" test_replace.cpp)
add_rocthrust_test("thrust.hip.reverse_iterator" test_reverse_iterator.cpp)
add_rocthrust_test("thrust.hip.scan" test_scan.cpp)
add_rocthrust_test("thrust.hip.scan_by_key" test_scan_by_key.cpp)
add_rocthrust_test("thrust.hip.scatter" test_scatter.cpp)
add_rocthrust_test("thrust.hip.sequence" test_sequence.cpp)
add_rocthrust_test("thrust.hip.stable_sort" test_stable_sort.cpp)
add_rocthrust_test("thrust.hip.stable_sort_by_key" test_stable_sort_by_key.cpp)
add_rocthrust_test("thrust.hip.stable_sort_by_key_large" test_stable_sort_by_key_large.cpp)
add_rocthrust_test("thrust.hip.stable_sort_large" test_stable_sort_large.cpp)
add_rocthrust_test("thrust.hip.sort" test_sort.cpp)
add_rocthrust_test("thrust.hip.sort_by_key" test_sort_by_key.cpp)
add_rocthrust_test("thrust.hip.sort_by_key_variable_bits" test_sort_by_key_variable_bits.cpp)
add_rocthrust_test("thrust.hip.sort_permutation_iterator" test_sort_permutation_iterator.cpp)
add_rocthrust_test("thrust.hip.sort_variables" test_sort_variables.cpp)
add_rocthrust_test("thrust.hip.swap_ranges" test_swap_ranges.cpp)
add_rocthrust_test("thrust.hip.tabulate" test_tabulate.cpp)
add_rocthrust_test("thrust.hip.transform" test_transform.cpp)
add_rocthrust_test("thrust.hip.transform_iterator" test_transform_iterator.cpp)
add_rocthrust_test("thrust.hip.transform_reduce" test_transform_reduce.cpp)
add_rocthrust_test("thrust.hip.transform_scan" test_transform_scan.cpp)
add_rocthrust_test("thrust.hip.tuple" test_tuple.cpp)
add_rocthrust_test("thrust.hip.tuple_reduce" test_tuple_reduce.cpp)
add_rocthrust_test("thrust.hip.tuple_sort" test_tuple_sort.cpp)
add_rocthrust_test("thrust.hip.tuple_transform" test_tuple_transform.cpp)
add_rocthrust_test("thrust.hip.uninitialized_copy" test_uninitialized_copy.cpp)
add_rocthrust_test("thrust.hip.uninitialized_fill" test_uninitialized_fill.cpp)
add_rocthrust_test("thrust.hip.unique" test_unique.cpp)
add_rocthrust_test("thrust.hip.unique_by_key" test_unique_by_key.cpp)
add_rocthrust_test("thrust.hip.vector" test_vector.cpp)
add_rocthrust_test("thrust.hip.vector_insert" test_vector_insert.cpp)
add_rocthrust_test("thrust.hip.vector_manipulation" test_vector_manipulation.cpp)
add_rocthrust_test("thrust.hip.zip_iterator" test_zip_iterator.cpp)
add_rocthrust_test("thrust.hip.zip_iterator_reduce" test_zip_iterator_reduce.cpp)
add_rocthrust_test("thrust.hip.zip_iterator_scan" test_zip_iterator_scan.cpp)
add_rocthrust_test("thrust.hip.zip_iterator_sort" test_zip_iterator_sort.cpp)
add_rocthrust_test("thrust.hip.zip_iterator_sort_by_key" test_zip_iterator_sort_by_key.cpp)
add_rocthrust_test("thrust.hip.zip_iterator_reduce_by_key" test_zip_iterator_reduce_by_key.cpp)
